samples/_failures_safe/1761249143_65467e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ecfc97b0.c: In function ‘main’:
./samples/SAFE/__tmp_ecfc97b0.c:159:5: error: expected ‘,’ or ‘;’ at end of input
  159 |     for (int i = 0
      |     ^~~
./samples/SAFE/__tmp_ecfc97b0.c:159:5: error: expected declaration or statement at end of input
